--- a/index.html
+++ b/index.html
@@ -16,20 +16,15 @@
             font-family: 'Arial', sans-serif;
         }
 
-        /* Pseudo-element for the blurred background */
-        body::before {
-            content: "";
+        /* Fullscreen video background */
+        video#background-video {
             position: absolute;
             top: 0;
             left: 0;
-            right: 0;
-            bottom: 0;
-            background-image: url('img.png'); /* Replace with your background image path */
-            background-size: cover; /* Cover the entire viewport */
-            background-position: center; /* Center the background image */
-            background-repeat: no-repeat; /* Prevent repeating the background image */
-            filter: blur(8px); /* Adjust the blur level as needed */
-            z-index: 0; /* Place behind all other content */
+            width: 100vw;
+            height: 100vh;
+            object-fit: cover; /* Ensures the video covers the entire viewport */
+            z-index: -1; /* Places the video behind other elements */
         }
 
         .container {
@@ -40,7 +35,7 @@
             max-width: 1000px;
             box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
             position: relative;
-            z-index: 1; /* Ensure the container is above the blurred background */
+            z-index: 1; /* Ensure the container is above the video background */
             display: flex;
             align-items: center; /* Align items vertically */
         }
@@ -122,8 +117,13 @@
     </style>
 </head>
 <body>
+    <!-- Video Background -->
+    <video id="background-video" autoplay muted loop playsinline>
+        <source src="solar.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
     <div class="container">
-    
         <div>
             <h1>Hello Chaydham</h1>
             <p class="assistant-message">I'm your STEP assistant. How can I help you?</p>
