--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <body>
     <!-- Video Background -->
     <video id="background-video" autoplay muted loop playsinline>
-        <source src="solar.mp4" type="video/mp4">
+        <source src="/solar.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
