--- a/control.html
+++ b/control.html
@@ -3,69 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relay Control</title>
+    <title>Relay Control with Firebase Authentication</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: #2b2b2b;
-            color: white;
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        h1 {
-            margin-top: 20px;
-        }
-
-        .container-wrapper {
-            display: flex;
-            justify-content: space-between;
-            gap: 20px;
-            flex-wrap: wrap; /* Ensures responsiveness on smaller screens */
-            width: 90%;
-            max-width: 1200px;
-            margin-top: 20px;
+            background-color: #333;
+            color: white;
         }
 
         .container {
-            flex: 1;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            padding: 20px;
-            text-align: center;
-            min-width: 280px;
-            margin-bottom: 20px;
-        }
-        .containertext {
-            flex: 1;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            padding: 20px;
-            text-align: center;
-            min-width: 280px;
-            margin-bottom: 20px;
-            width: 60%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
         }
 
-        .container h2 {
-            margin-bottom: 20px;
-        }
-
-        .relay-square {
-            background: rgba(255, 255, 255, 0.15);
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-            margin: 10px 0;
+        .relay {
+            width: 90%;
+            max-width: 500px;
+            background-color: #444;
+            margin: 10px;
             padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
         }
 
-        .relay-square p {
+        .relay h2 {
+            margin: 0;
+            padding: 10px 0;
+            font-size: 20px;
+        }
+
+        .relay p {
+            font-size: 16px;
             margin: 10px 0;
+        }
+
+        .switch-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
         }
 
         .switch {
@@ -83,7 +63,6 @@
 
         .slider {
             position: absolute;
-            cursor: pointer;
             top: 0;
             left: 0;
             right: 0;
@@ -96,182 +75,130 @@
         .slider:before {
             position: absolute;
             content: "";
-            height: 17px;
-            width: 17px;
-            left: 4px;
-            bottom: 4px;
+            height: 19px;
+            width: 19px;
+            left: 3px;
+            bottom: 3px;
             background-color: white;
             border-radius: 50%;
             transition: 0.4s;
         }
 
         input:checked + .slider {
-            background-color: #0078d7;
+            background-color: #4caf50;
         }
 
         input:checked + .slider:before {
             transform: translateX(25px);
         }
-        .text-zone {
-            display: flex;
-            justify-content: center;    /* Centers horizontally */
-            align-items: center;        /* Centers vertically */
-            background-color: rgba(255, 255, 255, 0.1);
-            color: white;
-            border-radius: 10px;
-            font-family: 'Courier New', Courier, monospace;
-            width: 100%;
-            min-height: 100px;
-            box-sizing: border-box;
-            overflow-y: auto;
-            white-space: pre-wrap;
-            text-align: center;         /* Centers the text inside */
-            padding: 10px;
-            flex-direction: column;     /* Ensures content flows vertically if needed */
-            height: 100%;               /* Ensure the container takes full height */
+
+        .status {
+            margin-top: 20px;
+            padding: 15px;
+            background-color: #555;
+            border-radius: 8px;
+            text-align: center;
+            max-width: 500px;
         }
     </style>
 </head>
 <body>
-    <h1>Relay Control Panel</h1>
-    <div class="container-wrapper">
-        <!-- Source Container -->
-        <div class="container">
-            <h2>BATTERIES</h2>
-            <div class="relay-square">
-                <p>Charging</p>
+    <div class="container">
+        <div class="relay">
+            <h2>Charging Control</h2>
+            <div class="switch-container">
+                <p>Solar relay</p>
                 <label class="switch">
-                    <input type="checkbox" id="charging" onchange="controlRelay('charging', this.checked)">
-                    <span class="slider"></span>
-                </label>
-            </div>
-            <div class="relay-square">
-                <p>Production</p>
-                <label class="switch">
-                    <input type="checkbox" id="production" onchange="controlRelay('production', this.checked)">
+                    <input type="checkbox" id="charging" onchange="updateRelayState('charging', this.checked)">
                     <span class="slider"></span>
                 </label>
             </div>
         </div>
 
-        <!-- Relays Container -->
-        <div class="container">
-            <h2>SOURCE</h2>
-            <div class="relay-square">
-                <p>SOLAR PANEL</p>
+        <div class="relay">
+            <h2>Production Control</h2>
+            <div class="switch-container">
+                <p>Series relay</p>
                 <label class="switch">
-                    <input type="checkbox" id="relay1" onchange="controlRelay('relay1', this.checked)">
-                    <span class="slider"></span>
-                </label>
-            </div>
-            <div class="relay-square">
-                <p>HYDRO-GENERATOR</p>
-                <label class="switch">
-                    <input type="checkbox" id="relay2" onchange="controlRelay('relay2', this.checked)">
+                    <input type="checkbox" id="production" onchange="updateRelayState('production', this.checked)">
                     <span class="slider"></span>
                 </label>
             </div>
         </div>
 
-        <!-- Emergency Container -->
-        <div class="container">
-            <h2>PUMP</h2>
-            <div class="relay-square">
-                <p>WATER PUMP</p>
+        <div class="relay">
+            <h2>Pump Control</h2>
+            <div class="switch-container">
+                <p>Toggle Pump</p>
                 <label class="switch">
-                    <input type="checkbox" id="emergency" onchange="controlRelay('emergency', this.checked)">
+                    <input type="checkbox" id="pump" onchange="updateRelayState('pump', this.checked)">
                     <span class="slider"></span>
                 </label>
             </div>
         </div>
+
+        <div class="status" id="status">System Status: Idle</div>
     </div>
 
-    <!-- Text Zone for displaying messages -->
-    <div class="containertext">
-        <h2>System Messages</h2>
-        <div class="text-zone" id="textZone">
-            System is idle.
-        </div>
-    </div>
+    <script type="module">
+        // Firebase SDK imports
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
 
-    <script>
-        function controlRelay(relay, state) {
-            const chargingSwitch = document.getElementById("charging");
-            const productionSwitch = document.getElementById("production");
-            const relay1Switch = document.getElementById("relay1");
-            const relay2Switch = document.getElementById("relay2");
-            const emergencySwitch = document.getElementById("emergency");
+// Firebase configuration
+const firebaseConfig = {
+    apiKey: "AIzaSyCB24M1uhp6-Vv-ggaqhhKcQqxQcPnd6Cc",
+    authDomain: "step-66bce.firebaseapp.com",
+    databaseURL: "https://step-66bce-default-rtdb.europe-west1.firebasedatabase.app/",
+    projectId: "step-66bce",
+    storageBucket: "step-66bce.appspot.com",
+    messagingSenderId: "724663138827",
+    appId: "1:724663138827:web:e142993cb56f3d0f81e50e"
+};
 
-            let message = '';
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const database = getDatabase(app);
 
-            if (relay === "charging" && state) {
-                // Prevent enabling "Charging" if "Production" is active
-                if (productionSwitch.checked) {
-                    message = "You need to deactivate Production before activating Charging.";
-                    chargingSwitch.checked = false; // Revert to the original state
-                    updateTextZone(message);
-                    return;
-                }
-                productionSwitch.disabled = true; // Disable "Production" switch
-                message = "Charging activated.";
-                updateTextZone(message);
-            } else if (relay === "charging" && !state) {
-                productionSwitch.disabled = false; // Re-enable "Production" switch
-                message = "Charging deactivated.";
-                updateTextZone(message);
-            }
+// Sign in user
+const email = "chaydambaya1@gmail.com";
+const password = "123456";
 
-            if (relay === "production" && state) {
-                // Prevent enabling "Production" if "Charging" is active
-                if (chargingSwitch.checked) {
-                    message = "You need to deactivate Charging before activating Production.";
-                    productionSwitch.checked = false; // Revert to the original state
-                    updateTextZone(message);
-                    return;
-                }
-                chargingSwitch.disabled = true; // Disable "Charging" switch
-                message = "Production activated.";
-                updateTextZone(message);
-            } else if (relay === "production" && !state) {
-                chargingSwitch.disabled = false; // Re-enable "Charging" switch
-                message = "Production deactivated.";
-                updateTextZone(message);
-            }
+signInWithEmailAndPassword(auth, email, password)
+    .then(() => {
+        console.log("Signed in successfully.");
+    })
+    .catch((error) => {
+        console.error("Error signing in:", error.message);
+    });
 
-            if (relay === "relay1" && state) {
-                message = "Relay 1 activated.";
-                updateTextZone(message);
-            } else if (relay === "relay1" && !state) {
-                message = "Relay 1 deactivated.";
-                updateTextZone(message);
-            }
+// Update relay state in Firebase
+window.updateRelayState = function (relay, state) {
+    const relayRef = ref(database, `relays/${relay}`);
+    set(relayRef, { state: state ? "on" : "off" })
+        .then(() => {
+            console.log(`${relay} is now ${state ? "ON" : "OFF"}.`);
+        })
+        .catch((error) => {
+            console.error(`Error updating ${relay} state:`, error.message);
+        });
+};
 
-            if (relay === "relay2" && state) {
-                message = "Relay 2 activated.";
-                updateTextZone(message);
-            } else if (relay === "relay2" && !state) {
-                message = "Relay 2 deactivated.";
-                updateTextZone(message);
-            }
+// Listen for changes in pump state
+const pumpRef = ref(database, "relays/pump");
+onValue(pumpRef, (snapshot) => {
+    const pumpState = snapshot.val()?.state === "on";
+    document.getElementById("pump").checked = pumpState;
+});
 
-            if (relay === "emergency" && state) {
-                message = "Emergency Pump activated.";
-                updateTextZone(message);
-            } else if (relay === "emergency" && !state) {
-                message = "Emergency Pump deactivated.";
-                updateTextZone(message);
-            }
-
-            fetch(`/control?relay=${relay}&state=${state ? 'on' : 'off'}`)
-                .then(response => response.json())
-                .then(data => console.log(data)) // You can handle further response data here
-                .catch(error => console.error('Error:', error));
-        }
-
-        function updateTextZone(message) {
-            const textZone = document.getElementById("textZone");
-            textZone.textContent = message;
-        }
-    </script>
+// Listen for changes in charging state
+const chargingRef = ref(database, "relays/charging");
+onValue(chargingRef, (snapshot) => {
+    const chargingState = snapshot.val()?.state === "on";
+    document.getElementById("charging").checked = chargingState;
+});
+</script>
 </body>
 </html>
